[package]
name = "hey-stop"
version = "0.1.0"
authors = ["zhouyang <zhouyang@shanghaitech.edu.cn>"]

[dependencies]

clap = "2.21.1"
libc = "0.2.21"
log = "0.3.7"
nix = { git = "https://github.com/chaosagent/nix", rev="34acfdd"}
ptrace = { git  = "https://github.com/chaosagent/rust-ptrace" , rev = "1e75a88"}
syscall = "0.2.1"



