[package]
name = "hey-stop"
version = "0.1.0"
authors = ["zhouyang <zhouyang@shanghaitech.edu.cn>"]

[dependencies]

clap = "2.21.1"
libc = "0.2.21"
log = "0.3.7"
nix = "0.8.1"
seccomp={git = "https://github.com/zzxxtt/rust-seccomp"}
ptrace = { git  = "https://github.com/zzxxtt/rust-ptrace"}
syscall = "0.2.1"
fnv = "1.0.5"
